Bring knockout, start store, model

--- a/sandbox-resource.html
+++ b/sandbox-resource.html
@@ -5,7 +5,8 @@
   require = ({
     paths: {
       'jquery': 'lib/jquery',
-      'promise': 'lib/promise'
+      'promise': 'lib/promise',
+      'knockout': 'lib/knockout-2.1.0.debug'
     },
     shim: {
       'jquery': {
