--- a/sandbox-resource.html
+++ b/sandbox-resource.html
@@ -6,7 +6,8 @@
     paths: {
       'jquery': 'lib/jquery',
       'promise': 'lib/promise',
-      'knockout': 'lib/knockout-2.1.0.debug'
+      'knockout': 'lib/knockout-2.1.0.debug',
+      'knockout.mapping': 'lib/knockout.mapping-2.2.1.debug'
     },
     shim: {
       'jquery': {
