Move Model to Object, reinvented new Model

--- a/task-client.html
+++ b/task-client.html
@@ -60,7 +60,7 @@
   </footer>
 
   <script type="text/html" id="task-row">
-    <li data-bind="template: 'task-entry'"></li>
+    <li data-bind="template: {name: 'task-entry', data: data}"></li>
   </script>
 
   <script type="text/html" id="task-entry">
