--- a/examples/tasks/client.html
+++ b/examples/tasks/client.html
@@ -62,7 +62,7 @@
   </footer>
 
   <script type="text/html" id="task-row">
-    <li data-bind="template: {name: 'task-entry', data: data}"></li>
+    <li data-bind="template: {name: 'task-entry', data: model}"></li>
   </script>
 
   <script type="text/html" id="task-entry">
