--- a/examples/tasks/client.html
+++ b/examples/tasks/client.html
@@ -66,17 +66,17 @@
   </script>
 
   <script type="text/html" id="task-entry">
-    <span class="task" data-bind="css: {'done': data().done}">
+    <span class="task" data-bind="ifnot: editing, css: {'done': data().done}">
       <input type="checkbox" data-bind="checked: data().done"/>
-      <span class="title display" data-bind="visible: !editing(), text: data().title, click: startEdit"></span>
+      <span class="title display" data-bind="text: data().title, click: startEdit"></span>
       <span class="tags" data-bind="foreach: data().tags">
-        #<span data-bind="text: data.name"></span> 
+        <a href="#">#<span data-bind="text: data.name"></span></a>
       </span>
       &mdash; <em><span data-bind="text: data().author.data.nickname"></span></em>
-      <form data-bind="visible: editing, submit: finishEdit">
-        <input type="title edit" class="title" data-bind="value: data().title, valueUpdate: 'afterkeydown', hasfocus: editing" placeholder="Type in a title"/>
-      </form>
     </span>
+    <form data-bind="if: editing, submit: finishEdit">
+      <input type="title edit" class="title" data-bind="value: data().title, valueUpdate: 'afterkeydown', hasfocus: editing" placeholder="Type in a title"/>
+    </form>
   </script>
 
 </body>
