--- a/examples/tasks/client.html
+++ b/examples/tasks/client.html
@@ -62,20 +62,24 @@
   </footer>
 
   <script type="text/html" id="task-row">
-    <li data-bind="template: {name: 'task-entry', data: model}"></li>
+    <li data-bind="template: {name: 'task-entry'}"></li>
   </script>
 
   <script type="text/html" id="task-entry">
-    <span class="task" data-bind="ifnot: editing, css: {'done': data().done}">
+    <span class="task" data-bind="ifnot: editing, css: {'done': model().data().done}">
+      <!-- ko with: model -->
       <input type="checkbox" data-bind="checked: data().done"/>
       <span class="title display" data-bind="text: data().title, click: startEdit"></span>
       <span class="tags" data-bind="foreach: data().tags">
         <a href="#">#<span data-bind="text: data.name"></span></a>
       </span>
       &mdash; <em><span data-bind="text: data().author.data.nickname"></span></em>
+      <!-- /ko -->
     </span>
-    <form data-bind="if: editing, submit: finishEdit">
+    <form data-bind="if: editing, submit: saveAndView">
+      <!-- ko with: model -->
       <input type="title edit" class="title" data-bind="value: data().title, valueUpdate: 'afterkeydown', hasfocus: editing" placeholder="Type in a title"/>
+      <!-- /ko -->
     </form>
   </script>
 
