--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -16,6 +16,7 @@ var exports = {};
 				paths: {
 					'jquery' : '../lib/jquery',
 					'promise' : '../lib/promise',
+					'reqwest' : '../lib/reqwest-0.4.5',
 
 					'avalanche' : '../js/avalanche',
 					'spec' : 'js/spec'
